Spacing fixes, added contest features.
- Added coordinator rank, notoriety skills (if unranked, they are hidden).
- Rollers now list in a more sensible order (equation, pool, mod, button).

--- a/Pokerole_v2/Pokerole.css
+++ b/Pokerole_v2/Pokerole.css
@@ -8,6 +8,7 @@
 
     --blue:#00b2c2;
     --red:#e55035;
+    --pink:#CE7999;
 
     --tough:#f6e593;
     --cool:#f9ad8e;
@@ -298,7 +299,6 @@ input, select, textarea{
 .sheet-options-toggle[value="0"] ~ .sheet-use-options{
     display:none !important;
 }
-
 .sheet-contest-toggle[value="1"] ~ .sheet-battle-mode,
 .sheet-contest-toggle[value="0"] ~ .sheet-contest-mode{
     display:none !important;
@@ -652,6 +652,7 @@ input, select, textarea{
     border-radius:10px;
     background-color:var(--blue);
     padding: 5px 0px;
+    text-shadow: 0px 0px 2px var(--background);
 }
 .sheet-skills .sheet-skills-sub{
     display:block;
@@ -663,8 +664,38 @@ input, select, textarea{
     border-radius:10px;
     padding:5px 0px;
     color: var(--background);
-    text-shadow: 0px 0px 5px black;
+    text-shadow: 0px 0px 5px var(--border);
 }
+
+.sheet-skills .sheet-skills-title{
+    display:block;
+    width:-webkit-max-content;
+    width:-moz-max-content;
+    width: 730px;
+    margin: 2px auto;
+    margin-top: 10px;
+    border-radius:10px;
+    background-color:var(--pink);
+    padding: 5px 0px;
+    text-shadow: 0px 0px 2px var(--background);
+}
+
+.sheet-skills .sheet-skills-contest{
+    display:block;
+    width:-webkit-max-content;
+    width:-moz-max-content;
+    width:max-content;
+    margin:2px auto;
+    border-radius:10px;
+    background-color:var(--pink);
+    padding: 5px 0px;
+    color: var(--background);
+}
+
+.sheet-skills .sheet-skills-contest strong{
+    text-shadow: 0px 0px 5px var(--border);
+}
+
 .sheet-skills .sheet-skills-col > *{
     margin-top:3px;
 }
@@ -673,11 +704,12 @@ input, select, textarea{
     width:180px;
 }
 .sheet-skills .sheet-skills-col strong{
-    display:inline-block;   
+    display:inline-block;
     width:100px;
     text-align:right;
 }
-.sheet-skills .sheet-skills-col label{
+.sheet-skills .sheet-skills-col label,
+.sheet-skills .sheet-skills-title label{
     display:block;
     text-align:center
 }
